--- a/app/src/main/res/layout/viewholder.xml
+++ b/app/src/main/res/layout/viewholder.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="110sp"
     android:orientation="horizontal">
 
 
     <ImageView
-        android:id="@+id/lista_curso_personalizada_imagem"
-        android:layout_width="100dp"
+        android:id="@+id/item_produto_imagem"
+        android:layout_width="110sp"
         android:layout_height="match_parent" />
 
     <LinearLayout
@@ -20,42 +20,49 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Descricao"
-            android:textSize="10dp" />
-
-        <TextView
-            android:id="@+id/item_produto_precoUnitario"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Preço"
-            android:textSize="10dp" />
-
-        <TextView
-            android:id="@+id/item_produto_validade"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Validade"
-            android:textSize="10dp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/item_produto_marca"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Marca"
-            android:textSize="10dp" />
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/item_produto_validade"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Validade"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/item_produto_lote"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Lote"
-            android:textSize="10dp" />
+            android:textSize="20sp" />
+    </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:orientation="vertical">
+        <TextView
+            android:id="@+id/item_produto_precoUnitario"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Preço"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/item_produto_unidades"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Unidades"
-            android:textSize="10dp" />
+            android:textSize="20sp" />
 
     </LinearLayout>
 
