--- a/app/src/main/res/layout/activity_compras.xml
+++ b/app/src/main/res/layout/activity_compras.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    tools:context="br.com.bhl.superfidapp.Compras">
+    tools:context="br.com.bhl.superfidapp.MainBluetoothActivity">
 
     <android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
